fix article-setup alignment

--- a/src/styles/how-it-works/article-branches-urls.scss
+++ b/src/styles/how-it-works/article-branches-urls.scss
@@ -75,10 +75,10 @@
   padding-top: 0;
 
   > .well {
-    margin: 90px auto 30px;
+    margin: 90px 30px 30px;
 
     @media (max-width: 930px) {
-      margin-top: 30px;
+      margin: 30px 0;
     }
   }
 
